--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>New Company Inc.</title>
   </head>
   <body>
+    <main>
     <div class="skip"><a href="#main">Skip to Main Content</a></div>
     <div class="container">
       <nav>
@@ -59,5 +60,6 @@
         &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
     </footer>
     </div>
+    </main>
   </body>
 </html>
